chore: replace 'collect(toList())' with 'toList()'